# koubounokanban

./: .gitignore  README.md  file_monitor.py  main.py  msg.py  pyproject.toml  run.py
app/: app.py
