[tool.poetry]
name = "koubounokanban"
version = "0.1.0"
description = "Simple Knowledge Storage System using Python-Flask"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.6"
flask = "^2.2.2"
mistletoe = "^1.0.1"
#flake8 = {version = "^6.0.0", python = ">=3.8.1"}

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
